--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="purple_500">#8141FE</color>
+    <color name="gray01">#cccccc</color>
+    <color name="gray02">#777777</color>
+    <color name="gray03">#EDEDED</color>
 </resources>
